<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gradientbackground"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
		android:text="Calculadora de Tributos PJ"
		android:textAppearance="?android:attr/textAppearanceLarge"
		android:gravity="center_horizontal"
		android:layout_weight="1"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="6"
        android:orientation="vertical">
        
	    <TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:textColor="#ffffff"
			android:text="@string/desenvolvedor"/>
	    
		<TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:textColor="#ffffff"
			android:text="@string/email"/>
	        
		<TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:textColor="#ffffff"
			android:text="@string/twitter"/>
		
		<TextView 
	        android:layout_height="wrap_content"
	        android:layout_width="fill_parent"
	        android:textColor="#ffffff"
			android:text="@string/website"/>    
        
    </LinearLayout>
    
    <TextView 
        android:layout_height="20dp"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:text="@string/versao" />

</LinearLayout>